--- a/WpfApp1.csproj
+++ b/WpfApp1.csproj
@@ -23,12 +23,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="connectionConfiguration.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <PackageReference Include="The.Microsoft.Expression.Interactions" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
