Added viewing from created file, changed ui a bit, changed export into excel file.

--- a/WpfApp1.csproj
+++ b/WpfApp1.csproj
@@ -23,6 +23,8 @@
     <None Remove="View\Images\Import.png" />
     <None Remove="View\Images\SplashScreen.jpg" />
     <None Remove="View\Images\View.png" />
+    <None Remove="View\Images\ViewFromDB.png" />
+    <None Remove="View\Images\ViewFromFile.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,7 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="EPPlus" Version="7.4.2" />
+    <PackageReference Include="EPPlus" Version="7.5.1" />
     <PackageReference Include="MahApps.Metro" Version="2.4.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10">
@@ -40,6 +42,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
+    <PackageReference Include="Prism.Core" Version="9.0.537" />
     <PackageReference Include="The.Microsoft.Expression.Interactions" Version="4.5.0" />
   </ItemGroup>
 
@@ -50,14 +53,17 @@
     <Resource Include="View\Images\Import.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="View\Images\View.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
   </ItemGroup>
 
   <ItemGroup>
     <Resource Include="View\Images\SplashScreen.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="View\Images\ViewFromDB.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="View\Images\ViewFromFile.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
 
